Add lessons up to 2.2.

--- a/content/learn/intro/1.1.md
+++ b/content/learn/intro/1.1.md
@@ -1,40 +1,46 @@
 ---
-title: "1.1 Hello World"
+title: "1.1 Comments"
 date: 2020-05-09
 weight: 10
 type: python
 ---
 
-## Hello World
-It's a tradition that the first program you write when learning a new programming language is one that just prints the words "Hello World!" to the screen.
+### Comments
 
-We do this just because it's pretty much simplest program we can write, and because it makes sure everything is working. If you can write and run this small program, you can write and run any program!
-
-## The print() function
-
-When your program needs to do something it can *call a function*.
-
-When you call the `print` function it will print text to the screen.
+In programming we call the `#` character "hash". In Python anything that
+comes after the `#` character is a *comment*.
 
 For example:
 
 ```
-print("I love programming.")
+# Let's print something
+print("Hello World!")  # nice job!
+# We are done
 ```
 
-it will print this to the screen:
+will just print:
 
 ```
-I love programming.
+Hello World
 ```
 
-## The assignment
+Comments are for the **human** reading the program. However be kind to the human
+because that human could be you! When you write a lot of programs, you need to
+leave comments in order to understand the code later on.
 
-Write a program that prints **Hello World!** to the screen:
+The code tells the computer what to do, the comments tell the human why the code
+was written that way.
 
-1. Write your program in the pane below.
-1. Run your program by clicking the **Run** button below the pane.
+### Assignment
+
+1. Write a program that has three print statements and three comments.
+1. You can print anything you want.
+2. Your comments can say anything you want.
+
+Make sure you run your program to test it.
 
 ## Your Program
 
-{{% ide %}}
+{{< ide >}}# Write your program here.
+{{< /ide >}}
+
