Tweak intro lessons

--- a/content/intro/functions/2.0.md
+++ b/content/intro/functions/2.0.md
@@ -1,6 +1,6 @@
 ---
 title: "2.0 Turtle"
-description: ""
+description: "The turtle module is for drawing on the screen."
 date: 2020-05-09
 weight: 200
 type: python
