--- a/content/intro/functions/2.1.md
+++ b/content/intro/functions/2.1.md
@@ -1,6 +1,6 @@
 ---
 title: "2.1 Functions"
-description: ""
+description: "Make and call your own functions."
 date: 2020-05-09
 weight: 210
 type: python
@@ -8,9 +8,9 @@ type: python
 
 ## Make Your Own Functions
 
-In Python you can make your own functions. You give your function a name, any
-name you want, and you decide what your function should do. Then you can call
-your function, as many times as you want.
+In Python you can make your own functions. You can give your function any name
+that you want, and you can decide what your function should do. Then you can
+call your function, as many times as you want.
 
 ## Define A Function
 
@@ -34,13 +34,15 @@ We call our function like this:
 greet()
 ```
 
-Run the program, click on console to see the output.
-
-It should print:
+Run the program it should print:
 
 ```
 hello
 ```
+
+So the `print()` function can print anything, but our `greet()` function always
+prints the word **hello**. We created the function `greet()` and we decided what
+it should do.
 
 ### Assignment
 
