--- a/content/intro/basics/1.0.md
+++ b/content/intro/basics/1.0.md
@@ -18,9 +18,9 @@ When you call the `print` function it will print text to the screen.
 
 For example:
 
-```
+{{< highlight python >}}
 print("I love programming.")
-```
+{{< / highlight >}}
 
 that will print this to the screen:
 
