--- a/content/intro/basics/1.1.md
+++ b/content/intro/basics/1.1.md
@@ -12,11 +12,11 @@ comes after the `#` character is a *comment*.
 
 For example:
 
-```
+{{< highlight python >}}
 # Let's print something
 print("Hello World!")  # nice job!
 # We are done
-```
+{{< / highlight >}}
 
 will just print:
 
