--- a/content/intro/functions/2.0.md
+++ b/content/intro/functions/2.0.md
@@ -25,9 +25,9 @@ sides, and he turns 3 times. That makes a square.
 
 Before he starts walking/drawing you can set the color like this:
 
-```
+{{< highlight python >}}
 turtle.color("red")
-```
+{{< / highlight >}}
 
 Some colors available are:
 
