--- a/content/intro/functions/2.1.md
+++ b/content/intro/functions/2.1.md
@@ -17,10 +17,10 @@ call your function, as many times as you want.
 In Python we define a function with the `def` keyword, where `def` is short for
 the word "define". Here's an example function that prints **hello**:
 
-```
+{{< highlight python >}}
 def greet():
   print("hello")
-```
+{{< / highlight >}}
 
 Notice the print line is indented. In Python indentation is very important. You
 can indent using the tab key on your keyboard. Sometimes the editor will indent
@@ -30,9 +30,9 @@ for you.
 
 We call our function like this:
 
-```
+{{< highlight python >}}
 greet()
-```
+{{< / highlight >}}
 
 Run the program it should print:
 
