--- a/content/intro/basics/1.4.md
+++ b/content/intro/basics/1.4.md
@@ -12,10 +12,10 @@ Variables are *names* for *values*.
 
 For example let's create a variable with the name `x`:
 
-```
+{{< highlight python >}}
 x = 3
 print(x)
-```
+{{< / highlight >}}
 
 That will print:
 
